--- a/app/src/main/res/layout/adapter_item_user.xml
+++ b/app/src/main/res/layout/adapter_item_user.xml
@@ -42,17 +42,28 @@
         </LinearLayout>
 
         <LinearLayout
+            android:weightSum="1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="2.5">
 
             <TextView
+                android:layout_weight=".2"
                 android:id="@+id/tv_user_name"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="@dimen/_5sdp"
                 android:gravity="center|left"
                 android:text="You are so charming."
+                android:textColor="@color/text_color_darck" />
+
+            <RadioButton
+                android:id="@+id/radiobtn"
+                android:layout_weight=".8"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/_5sdp"
+                android:gravity="center|left"
                 android:textColor="@color/text_color_darck" />
 
         </LinearLayout>
